deployment.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: contact-trace-api-service  
  labels:  
    app: contact-trace-api-service  
spec:  
  ports:  
    - port: 8080
      targetPort: 8080
  selector:  
    app: contact-trace-api  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 8080
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: contact-trace-api-service
          servicePort: 8080
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: contact-trace-api-service
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: contact-trace-api-service  
        version: v1  
    spec:  
      containers:  
        - name: contact-trace-api  
          image: yohanshanaka81/contact-trace-api:latest  
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8080  
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 8
            failureThreshold: 1
